--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
-    <canvas id="animation-canvas"></canvas>
-    <div class="background-overlay"></div>
-    <div class="content-overlay">
-        <!-- Ihr Content hier -->
-         Christopher Keibel
-    </div>
-    <script src="assets/js/animation.js"></script>
+    {{ content }}
+    <script src="{{ '/assets/js/animation.js' | relative_url }}"></script>
 </body>
 </html>
