add scroll to content arrow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,6 @@
 <body>
     {{ content }}
     <script src="{{ '/assets/js/animation.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/scrollToContent.js' | relative_url }}"></script>
 </body>
 </html>
